# autoux

./: .gitignore  README.md  apps.csv  netlify.toml  pyproject.toml
apps/dashboard/: README.md  package-lock.json
configs/: appointments.yaml  bagisto.yaml  bookstack.yaml  chatwoot.yaml  demo_live.yaml  example_click.yaml  ghost.yaml  grafana.yaml  huly.yaml  invoiceninja.yaml  kanboard.yaml  listmonk.yaml  mastodon.yaml  mattermost.yaml  metabase.yaml  nextcloud.yaml  nocodb.yaml  openproject.yaml  plane.yaml  plausible.yaml  prestashop.yaml  smoke-surfer.yaml  smoke.yaml  taiga.yaml  taxcaster.yaml  twenty.yaml
configs/apps/: open_ended.jsonl  public_demos.jsonl  registry.jsonl
configs/personas/: expanded.jsonl  seed.jsonl
demo/: HYPERFRAMES_BRIEF.md  SHOT_LIST.md  build_video_html.py  cinematic_intro.html  cinematic_intro_video.html  package-lock.json  package.json  render_video.js
deploy/: README.md
docs/: ARB_INTEGRATION.md  CODER.md  CODE_QUALITY.md  HANDOFF.md  USERSIM_PLAN.md
docs/apps/: APP_CATALOG.md  demos-v2.md  demos.md  usersim-target-apps-v2.md  usersim-target-apps.md
docs/harness/: docker-infrastructure-report-v2.md  docker-infrastructure-report.md  proposal-user-sim.md
docs/screenshots/: README.md
infra/: README.md  check-status.sh  dev-cluster-analysis.md  launch-vllm.sh  setup-local-cloudflared.sh  setup-vast-tunnel.sh  teardown-tunnel.sh
infra/k8s/: 01-lightweight.yaml  02-medium.yaml  03-ingress.yaml  (+3 more)
scripts/: analyze.py  grid.py
slides/: README.md  build.py  index.html  screenshot.py
tests/: test_contract.py
(+63 files in other folders)
